# top500-aggregator

./: .dockerignore  .env.sample  .gitignore  CNAME  Dockerfile  Dockerfile.frontend  Dockerfile.server  LICENSE  README.md  benchmarks.py  collector.py  deblank2ify.py  docker-compose.test.yml  docker-compose.yml  generator.py  graphing.py  main.py  manual_classifier.py  migrate.py  mypy-t.sh  mysql_testing_server.sh  nginx.conf  package-lock.json  package.json  predict.py  process_mnist.py  pyproject.toml  railway.toml  raw_leaderboard_validator.py  sbom.json  server.py  server_legacy.py  srcfile_duplicator.py  stats_ideas  train.py
archive/: latest.sql  season_7.sql  season_9_pre_1.sql
classifier/: model.py  train.py
data/: _season_12_prelim.json  _season_13_prelim.json  _season_13_prelim_revised.json  _season_14_prelim.json  _season_14_prelim_revised.json  _season_15_prelim.json  _season_34.json  _season_35.json  _season_36.json  data.db  season_1.json  season_10.json  season_11.json  season_12.json  season_13.json  season_14.json  season_15.json  season_16.json  season_17.json  season_18.json  season_2.json  season_3.json  season_4.json  season_5.json  season_6.json  season_7.json  season_8.json  season_9.json
database/: __init__.py  database.py
frontend/: .eslintrc.json  bun.lockb  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
heroes/: __init__.py  hero_comparison.py
leaderboards/: __init__.py  leaderboard_parser.py
mysql_database/: database.py
neural_network/: __init__.py  model.py  top_500_mnist.parms
static/: robots.txt  sitemap.xml
statistic/: __init__.py
templates/: base_template.html  index.html  season.html  trends.html
templates2/: base_template.html  season.html  trends.html
tests/: __init__.py  database_test.py  db_fixture.py  statistic_test.py  test_database.py  test_server.py  test_stat_calculations.py  test_stat_calculations_data_integrity.py
utils/: benchmarks.py  collector-linux.sh  collector.py  gen_benchmark.py  generator.py  manual_classifier.py  predict.py  train.py  (+4 more)
(+105 files in other folders)
