[tool.poetry]
name = "top500-aggregator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"
pyautogui = "^0.9.53"
pillow = "^10.2.0"
imagehash = "^4.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
mypy = "^1.5.1"
matplotlib-stubs = "^0.1.0"
types-pillow = "^10.0.0.3"
pytest-cov = "^4.0.0"

[tool.mypy]
check_untyped_defs = true
strict=true
exclude = [
    "utils/collector.py",
]
