[project]
name = "top500-aggregator"
version = "0.1.0"
description = ""
authors = [
    {name = "Aryan Kothariset -g allow-passthrough on",email = "87589047+thearyadev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=13.3.1,<14.0.0)",
    "pyautogui (>=0.9.53,<0.10.0)",
    "pillow (>=10.2.0,<11.0.0)",
    "imagehash (>=4.3.1,<5.0.0)"
]
package = false

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
types-pillow = "^10.0.0.3"
